--- a/index.html
+++ b/index.html
@@ -1,2 +1,40 @@
-halo halo kurwa
-pomocy czy to działą
+<html>
+  <head>
+    <title>GAME</title>
+  </head>
+  <body>
+    <span>YOUR CHOICE</span>
+    <div id="user-options">
+        <div>
+            <input type="radio" id="1" name="option" class="user-option">
+            <label for="1">⛰️</label>
+        </div>
+        <div>
+            <input type="radio" id="2" name="option" class="user-option">
+            <label for="2">✂️</label>
+        </div>
+        <div>
+            <input type="radio" id="3" name="option" class="user-option">
+            <label for="3">🧻</label>
+        </div>
+        <div>
+            <input type="radio" id="4" name="option" class="user-option">
+            <label for="4">🖖</label>
+        </div>
+        <div>
+            <input type="radio" id="5" name="option" class="user-option">
+            <label for="5">🦎</label>
+        </div>
+    </div>
+
+    <span>COMPUTER CHOICE</span>
+<div id="computer-choice">💭</div>
+
+<button id="play">▶️</button>
+
+<div id="output"></div>
+
+<script type="text/javascript" src="./index.js"></script>
+
+  </body>
+</html>
