--- a/index.html
+++ b/index.html
@@ -31,10 +31,15 @@
 <div id="computer-choice">💭</div>
 
 <button id="play">▶️</button>
+<br>
+
+Wins : <p id="Wins"></p>
+Loses : <p id="Loses"></p>
+Ties : <p id="Ties"></p>
 
 <div id="output"></div>
 
-<script type="text/javascript" src="./index.js"></script>
+<script type="text/javascript" src="script.js"></script>
 
   </body>
 </html>
