Poprawki z CSS i przyciskiem Reset

--- a/index.html
+++ b/index.html
@@ -47,7 +47,9 @@
 <th>REMISY : <p id="Ties"></p></th>
 </tr>
 </table>
-
+<br>
+<button class="button" value="Resetowanie Statystyk" onclick="res()">Resetowanie</button>
+<br>
 <br>
 <div id="output"></div>
 
